сделага статистика, хоть и с зависанием

--- a/Kopigrad/Components/Layout/Admin/AdminListMenu.razor
+++ b/Kopigrad/Components/Layout/Admin/AdminListMenu.razor
@@ -7,6 +7,7 @@
     <h5 @onclick="Requst" class="TextMenu">Заявки</h5>
     <h5 @onclick="Pdf" class="TextMenu">PDF расчет</h5>
     <h5 @onclick="Static" class="TextMenu">Статистика</h5>
+    <h5 @onclick="Files" class="TextMenu">Управление файлами</h5>
 </div>
 
 @code{
@@ -34,5 +35,10 @@
     public void Static()
     {
         Navigation.NavigateTo("/Static");
+    }
+
+    public void Files()
+    {
+        Navigation.NavigateTo("/FileManager");
     }
 }
