--- a/Kopigrad/Components/Pages/Admin/Register.razor
+++ b/Kopigrad/Components/Pages/Admin/Register.razor
@@ -15,35 +15,34 @@
 </div>
 
 <div class="VhodAdmin">
+    <h5 class="TextVhodAdmin">Имя:</h5>
+    <input  @bind="name" class="InputAdmin" />
     <h5 class="TextVhodAdmin">Email:</h5>
-    <input type="email" class="InputAdmin" />
+    <input type="email" @bind="email" class="InputAdmin" />
     <h5 class="TextVhodAdmin">Пароль:</h5>
-    <input type="password" class="InputAdmin" />
-@*     <div>
-        <h5 class="TextVhodAdmin">Код регистрации:</h5>
-        <input  />
-        <button type="button" >Отправить код</button>
-    </div>
-
-    @if (codeSent)
-    {
-        <div style="margin-top: 10px;">
-            <h5 class="TextVhodAdmin">Введите код, который пришел на почту copygrad96@mail.ru</h5>
-            <input  />
-            <button type="button" >Подтвердить</button>
-
-        </div>
-    } *@
-    <button @onclick="onClickVhod" class="BittonAdminVhod">Зарегистироваться</button>
+    <input type="password" @bind="password" class="InputAdmin" />
+    <h5 class="TextVhodAdmin">Секретный пароль:</h5>
+    <input type="password" @bind="SecretPassword" class="InputAdmin" />
+    <button @onclick="onClickVhod"  class="BittonAdminVhod">Зарегистироваться</button>
     <a href="/Admin" class="TextFindPassword">Назад</a>
+    <h2 class="TextFindPassword" style="color: red">@error</h2>
 </div>
 
+
 @code {
-    private string code = "a9Lx3Tq7Vm";
-    private bool codeSent = true;
+    string error = "";
+
+    string name = "";
+    string email = "";
+    string password = "";
+    string SecretPassword = "";
+
+    Classes.Autorisation.AutorisationClasses autorisationClasses = new Classes.Autorisation.AutorisationClasses();
 
     public void onClickVhod()
     {
+
+        autorisationClasses.register(name, email, password, SecretPassword);
         Navigation.NavigateTo("/Servise");
     }
 }
