--- a/Kopigrad/Components/Pages/Admin/Register.razor
+++ b/Kopigrad/Components/Pages/Admin/Register.razor
@@ -43,6 +43,6 @@
     {
 
         autorisationClasses.register(name, email, password, SecretPassword);
-        Navigation.NavigateTo("/Servise");
+        Navigation.NavigateTo("/Admin");
     }
 }
