--- a/Kopigrad/Components/_Imports.razor
+++ b/Kopigrad/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using Kopigrad.Components
 @using MudBlazor
 @using MudBlazor.Services
+@using Kopigrad.Components.Classes.Autorisation  @* чтобы коротко ссылаться на AutorisationClasses *@
