--- a/Kopigrad/Components/Pages/Admin/Material/AddMaterial.razor
+++ b/Kopigrad/Components/Pages/Admin/Material/AddMaterial.razor
@@ -1,6 +1,17 @@
 ﻿@page "/AddMaterial"
 @layout Layout.Menu.MenuAdmin;
 @rendermode InteractiveServer
+
+
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authentication.Cookies
+@using Microsoft.AspNetCore.Http
+@inject NavigationManager Navigation
+@attribute [Authorize]
+@inject AuthenticationStateProvider AuthStateProvider
+
+
  @using Kopigrad.Models;
 
 <head>
@@ -133,6 +144,14 @@
 
     protected override async Task OnInitializedAsync()
     {
+
+        var authState = await AuthStateProvider.GetAuthenticationStateAsync();
+        if (authState.User.Identity?.IsAuthenticated != true)
+        {
+            Navigation.NavigateTo("/Admin");
+            return;
+        }
+
         viewmaterials = manager.GetList();
     }
 
