--- a/Kopigrad/Components/Pages/Admin/Pdf/Pdf.razor
+++ b/Kopigrad/Components/Pages/Admin/Pdf/Pdf.razor
@@ -1,7 +1,13 @@
 ﻿@page "/Pdf"
 @using PdfSharpCore.Pdf.IO
 @rendermode InteractiveServer
-
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authentication.Cookies
+@using Microsoft.AspNetCore.Http
+@inject NavigationManager Navigation
+@attribute [Authorize]
+@inject AuthenticationStateProvider AuthStateProvider
 @inject IWebHostEnvironment env
 
 <head>
@@ -185,8 +191,14 @@
 };
 
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
+        var authState = await AuthStateProvider.GetAuthenticationStateAsync();
+        if (authState.User.Identity?.IsAuthenticated != true)
+        {
+            Navigation.NavigateTo("/Admin");
+            return;
+        }
         Classes.Admin.Servise.ManagmentMiniService managmentMiniService = new Classes.Admin.Servise.ManagmentMiniService();
         miniservices = managmentMiniService.getMiniServiceToPdf();
 
