--- a/Kopigrad/Components/Pages/Admin/Service/AddInfoService.razor
+++ b/Kopigrad/Components/Pages/Admin/Service/AddInfoService.razor
@@ -1,6 +1,12 @@
 ﻿@page "/AddInfoService/{id:int}"
 @inject NavigationManager Navigation
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authentication.Cookies
+@using Microsoft.AspNetCore.Http
 
+@attribute [Authorize]
+@inject AuthenticationStateProvider AuthStateProvider
 @rendermode InteractiveServer
 <head>
     <link rel="stylesheet" href="/users.css">
@@ -80,8 +86,14 @@
     string time = "";
     List<Models.Miniservice> miniservices = new List<Models.Miniservice>(); 
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
+        var authState = await AuthStateProvider.GetAuthenticationStateAsync();
+        if (authState.User.Identity?.IsAuthenticated != true)
+        {
+            Navigation.NavigateTo("/Admin");
+            return;
+        }
         Classes.Admin.Servise.ManagmentServiseClasses managmentServise = new Classes.Admin.Servise.ManagmentServiseClasses();
         Classes.Admin.Servise.ManagmentMiniService managmentMiniService = new Classes.Admin.Servise.ManagmentMiniService();
 
