--- a/Kopigrad/Components/Pages/Admin/Service/ChangeMiniServiceInfo.razor
+++ b/Kopigrad/Components/Pages/Admin/Service/ChangeMiniServiceInfo.razor
@@ -2,6 +2,18 @@
 @page "/ChangeMiniServiceInfo/{id:int}"
 @inject NavigationManager Navigation
 @rendermode InteractiveServer
+
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authentication.Cookies
+@using Microsoft.AspNetCore.Http
+
+@attribute [Authorize]
+
+@inject AuthenticationStateProvider AuthStateProvider
+@layout Layout.Menu.MenuAdmin;
+
+@inject NavigationManager Navigation
 <head>
     <link rel="stylesheet" href="/users.css">
     <link rel="stylesheet" href="/admin.css">
@@ -129,8 +141,15 @@
 
     List<Models.Material> viewmaterials = new List<Models.Material>();
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
+        var authState = await AuthStateProvider.GetAuthenticationStateAsync();
+        if (authState.User.Identity?.IsAuthenticated != true)
+        {
+            Navigation.NavigateTo("/Admin");
+            return;
+        }
+
         Classes.Admin.Servise.ManagmentServiseClasses managmentServise = new Classes.Admin.Servise.ManagmentServiseClasses();
         Classes.Admin.Servise.ManagerMaterial managerMaterial = new Classes.Admin.Servise.ManagerMaterial();
         Classes.Admin.Servise.ManagmentMiniService managmentMiniService = new Classes.Admin.Servise.ManagmentMiniService();
