починила верхнее меню

--- a/Kopigrad/Components/Layout/All/NavMenu.razor
+++ b/Kopigrad/Components/Layout/All/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿
+﻿@rendermode InteractiveServer
 
 <head>
     <link rel="stylesheet" href="admin.css">
@@ -33,7 +33,7 @@
 
 
     <div >
-        <img class="ContactImage" src="/Image/email.png" />
+        <img class="ContactImage" src="/Image/email.png" alt="Написать электронное письмо" />
         <img class="ContactImage" src="/Image/watsap.png" />
         <img class="ContactImage" src="/Image/telegram.png" />
     </div>
