--- a/Kopigrad/Components/Pages/User/infoService.razor
+++ b/Kopigrad/Components/Pages/User/infoService.razor
@@ -141,7 +141,9 @@
     <div class="ColumnUserCalculatorAmdButton">
         <h5 class="NameMiniService">Оформить заявку</h5>
 
-        <button class="ButtonUsers">Написать на whatsapp</button>
+        <a href="https://wa.me/79025876697" target="_blank">
+            <button class="ButtonUsers">Написать на WhatsApp</button>
+        </a>
         <button class="ButtonUsers" @onclick="ClickRequst">Отправить заявку</button>
         @if(id == 6)
         {
